[package]
name = "manifold3d"
description = "Bindings for Manifold - a Geometry library for topological robustness"
homepage = "https://github.com/NickUfer/manifold3d-rs"
license = "Apache-2.0"
version = "0.0.6"
edition = "2021"
include = [
    "/src",
    "/LICENSE",
    "/build.rs",
    "/tests"
]

[lib]
crate-type = ["lib"]

[dependencies]
manifold3d-macros = { path = "crates/macros", version = "0.0.3" }
manifold3d-sys = { git = "https://github.com/mattatz/manifold3d-sys-rs.git", branch = "windows" }
thiserror = "2.0.3"
num-traits = "0.2.19"
nalgebra = { version = "0.33.2", optional = true }

[dev-dependencies]
serial_test = "3.2"

[features]
nalgebra_interop = ["dep:nalgebra"]
export = ["manifold3d-sys/export"]
parallel = ["manifold3d-sys/parallel"]
static = ["manifold3d-sys/static"]

[workspace]
members = [
    "crates/macros"
]
